<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Festivals API</string>
    <string name="price_text">Price: </string>
    <string name="concession_text">Concession: </string>
    <string name="start_text">Start: </string>
    <string name="end_text">End: </string>
    <string name="art">Edinburgh Arts Festival</string>
    <string name="book">Edinburgh International Book Festival</string>
    <string name="international">Edinburgh International Festival</string>
    <string name="jazz">Edinburgh Jazz &amp; Blues Festival</string>
    <string name="mela">Edinburgh Mela Festival</string>
    <string name="tattoo">Edinburgh Military Tattoo</string>
    <string name="entry_text">Enter event title</string>
    <string name="ok">Ok</string>
    <string name="show_map">Show map</string>
    <string name="upcoming">Show upcoming events</string>
</resources>
